--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,4 @@
 {
-  "dependencies": {
-    "@strapi/plugin-graphql": "^4.0.0",
-    "@strapi/plugin-i18n": "4.11.1",
-    "@strapi/plugin-users-permissions": "4.11.1",
-    "@strapi/strapi": "4.11.1",
-    "better-sqlite3": "8.0.1",
-    "lodash.set": "^4.3.2",
-    "mime-types": "^2.1.27",
-    "react-is": "^18.2.0"
-  },
   "name": "backend",
   "private": true,
   "version": "0.1.0",
@@ -19,12 +9,18 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
+  "dependencies": {
+    "@strapi/plugin-i18n": "4.11.1",
+    "@strapi/plugin-users-permissions": "4.11.1",
+    "@strapi/strapi": "4.11.1",
+    "better-sqlite3": "8.0.1",
+    "react-is": "^18.2.0"
+  },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "359dd872-e871-430c-a542-d554a0eaaa90",
-    "template": "@strapi/template-blog@1.0.0"
+    "uuid": "9e5edb08-46c3-468b-b714-e04f0b157d00"
   },
   "engines": {
     "node": ">=14.19.1 <=18.x.x",
