--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "isomorphic-dompurify": "^1.7.0",
+    "marked": "^5.1.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "qs": "^6.11.2",
