--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dayjs": "^1.11.9",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "googleapis": "^122.0.0",
     "isomorphic-dompurify": "^1.7.0",
+    "js-cookie": "^3.0.5",
     "marked": "^5.1.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
