--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.9",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "google-auth-library": "^9.0.0",
     "googleapis": "^122.0.0",
     "isomorphic-dompurify": "^1.7.0",
     "js-cookie": "^3.0.5",
@@ -26,7 +27,7 @@
     "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "swr": "^2.2.0",
+    "tailwindcss": "3.3.2"
   }
 }
